# smtp-to-ses

./: .env.example  .gitignore  DEVELOPMENT.md  LICENSE  README.md  bridge.py  pyproject.toml
deploy/: smtp-to-ses.service
src/smtp_to_ses/: __init__.py  __main__.py  auth.py  config.py  handler.py  server.py
src/smtp_to_ses/checks/: __init__.py  email.py  spam.py
