[project]
name = "smtp-to-ses"
version = "0.1.0"
description = "Lightweight SMTP server that forwards incoming mail to AWS SES"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "smtp-to-ses contributors" },
]
keywords = ["smtp", "ses", "aws", "email", "relay", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "aiosmtpd>=1.4.6",
    "boto3>=1.34",
    "dnspython>=2.6",
    "email-validator>=2.2",
    "python-dotenv>=1.0",
]

[project.scripts]
smtp-to-ses = "smtp_to_ses.__main__:main"

[project.urls]
Homepage = "https://github.com/pierreclaverkoko/smtp-to-ses"
Repository = "https://github.com/pierreclaverkoko/smtp-to-ses"
Issues = "https://github.com/pierreclaverkoko/smtp-to-ses/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smtp_to_ses"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/DEVELOPMENT.md",
    "/LICENSE",
]

[dependency-groups]
dev = [
    "build>=1.2",
    "twine>=5.0",
]

[tool.uv]
package = true
